# tiledbytes

./: .gcc-flags.json  .gitignore  BUILDME.md  CMakeLists.txt  INSTALL.md  NOTES.md  README.md  run  tiledbytes.hpp
.github/workflows/: build-ci.yml  build.yml  in-tree-install.yml  on-push-ci.yml  on-push-uat.yml  pr-build.yml  unit-tests.yml
TiledBytes/: CMakeLists.txt  tiledbytes.hpp
TiledBytes/include/: tiledbytes.hpp
TiledBytes/src/: common.hpp  core.hpp  extractors.hpp  tiled_core.hpp  tiledbytes.cpp  tmx.cpp  tmx.hpp  tsx.cpp  tsx.hpp  typedefs.hpp  utils.cpp  utils.hpp  wangsets.cpp  wangsets.hpp
example/: build.test.hpp  test.cpp  test_API_basic.cpp  test_build.cpp  test_tmx.cpp  test_tsx.cpp  tsx_cat.test.hpp
example/res/: spider.tsx  test.tmx
sqrbytes/: utils.hpp
src/: common.hpp  tiled_core.hpp  tmx.cpp  tmx.hpp  typedefs.hpp
test/: CMakeLists.txt  run  run_tests.sh
test/res/: cat.tsx
test/samples/: MyTestSuite.test.hpp
test/units/: file_search.test.hpp  fixtures.hpp  tsx_cat.test.hpp
tests/: test.cpp
tiledbytes/: CMakeLists.txt  common.hpp  extractors.hpp  tiled_util.cpp  tiled_util.hpp  tiledbytes.hpp  tiledbytes.py  tmx.cpp  tmx.hpp  tsx.cpp  tsx.hpp  wangsets.cpp  wangsets.hpp
tiledbytes/include/: tiledbytes.hpp
tiledbytes/src/: tiledbytes.cpp  tiledbytes_priv.hpp
